# ChangeLog for media-sound/alsa-utils
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.95 2005/06/03 20:00:20 luckyduck Exp $

*alsa-utils-1.0.9a (03 Jun 2005)

  03 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +alsa-utils-1.0.9a.ebuild:
  new upstream release, see #94831

  27 May 2005; Jan Brinkmann <luckyduck@gentoo.org> alsa-utils-1.0.9.ebuild:
  introduced support for the nls useflag, fixes #92080

*alsa-utils-1.0.9 (27 May 2005)

  27 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +alsa-utils-1.0.9.ebuild:
  New upstream version released, see #94196.

  21 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org> files/alsasound,
  files/alsasound.confd:
  Cleaned up alsasound init script. Added RESTORE_ON_START and ENABLE_OSS_EMUL
  options.

  12 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -alsa-utils-0.9.8.ebuild, -alsa-utils-1.0.6.ebuild:
  Killing off 0.9 alsa.

  29 Mar 2005; Markus Rothe <corsair@gentoo.org> alsa-utils-1.0.8.ebuild:
  Stable on ppc64

  27 Mar 2005; Guy Martin <gmsoft@gentoo.org> alsa-utils-1.0.8.ebuild:
  Stable on hppa.

  20 Mar 2005; Lars Weiler <pylon@gentoo.org> alsa-utils-1.0.8.ebuild:
  Readded ppc to a 1.x version.

  08 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-utils-1.0.8.ebuild:
  Stable amd64, sparc, x86.

  12 Feb 2005; Robin H. Johnson <robbat2@gentoo.org>
  alsa-utils-1.0.7.ebuild:
  Add ~mips for my XXS1500 hardware.

  31 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org> files/alsasound:
  Don't return an error if there is no asound.state file.  Closes bug #80196.

  23 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> alsa-utils-1.0.8.ebuild:
  updated alsa-lib dependency to fix bug #79205.

*alsa-utils-1.0.8 (22 Jan 2005)

  22 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +alsa-utils-1.0.8.ebuild:
  Version bump.

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> alsa-utils-1.0.6.ebuild: